--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                   <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">
                 </div>
                 <blockquote class="block-47-quote">
-                  <p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-                  <cite class="block-47-quote-author">&mdash; Ethan McCown, CEO <a href="#">XYZ Inc.</a></cite>
+                  <p>&ldquo;Jane always finishes her projects on time and her work is of high quality.&rdquo;</p>
+                  <cite class="block-47-quote-author">&mdash; Boss, Performics</cite>
                 </blockquote>
               </div>
 
@@ -162,8 +162,8 @@
                   <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">
                 </div>
                 <blockquote class="block-47-quote">
-                  <p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-                  <cite class="block-47-quote-author">&mdash; Craig Gowen, CEO <a href="#">XYZ Inc.</a></cite>
+                  <p>&ldquo;Jane comes prepared to work and manages her time well..&rdquo;</p>
+                  <cite class="block-47-quote-author">&mdash; Manager, Performics</cite>
                 </blockquote>
               </div>
 
@@ -251,46 +251,6 @@
         </div>
       </div>
     </section>
-
-
-    <section class="site-section" id="section-features">
-      <div class="container">
-        <div class="row site-section">
-          <div class="col-md-8">
-            <p><img src="images/laptop_1.jpg" alt="" class="img-fluid"></p>
-          </div>
-          <div class="col-md-4">
-            <h3 class="mb-3">Big Benefits for Small Business</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-            <ul class="site-list">
-              <li class="site-check">Pointing has no control</li>
-              <li class="site-check">A small river named Duden flows</li>
-              <li class="site-check">Roasted parts of sentences fly into your mouth</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-8 order-md-2">
-            <p><img src="images/laptop_1.jpg" alt="" class="img-fluid"></p>
-          </div>
-          <div class="col-md-4 order-md-1">
-            <h3 class="mb-3">All in One Place</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-            <ul class="site-list">
-              <li class="site-check">Pointing has no control</li>
-              <li class="site-check">A small river named Duden flows</li>
-              <li class="site-check">Roasted parts of sentences fly into your mouth</li>
-            </ul>
-          </div>
-        </div>
-
-
-      </div>
-    </section>
-
 
     <section class="site-section" id="section-portfolio">
       <div class="container">
@@ -498,115 +458,31 @@
       </div>
     </section> <!-- .section -->
 
-    <section class="site-section" id="section-blog">
+      <section class="site-section bg-light" id="section-contact">
       <div class="container">
         <div class="row">
           <div class="col-md-12 mb-5">
             <div class="section-heading text-center">
-              <h2>Blog on <strong>Medium</strong></h2>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-6 col-lg-4 mb-4">
-            <div class="blog-entry">
-              <a href="#"><img src="images/post_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-              <div class="blog-entry-text">
-                <h3><a href="#">Creative Product Designer From Facebook</a></h3>
-                <p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-
-                <div class="meta">
-                  <a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-                  <a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-                </div>
-              </div>
+              <h2>Let's <strong>Work Together</strong>!</h2>
             </div>
           </div>
 
-          <div class="col-sm-6 col-lg-4 mb-4">
-            <div class="blog-entry">
-              <a href="#"><img src="images/post_2.jpg" alt="Image placeholder" class="img-fluid"></a>
-              <div class="blog-entry-text">
-                <h3><a href="#">Creative Product Designer From Facebook</a></h3>
-                <p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-
-                <div class="meta">
-                  <a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-                  <a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 mb-4">
-            <div class="blog-entry">
-              <a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
-              <div class="blog-entry-text">
-                <h3><a href="#">Creative Product Designer From Facebook</a></h3>
-                <p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-
-                <div class="meta">
-                  <a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-                  <a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="site-section bg-light" id="section-contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 mb-5">
-            <div class="section-heading text-center">
-              <h2>Wanna <strong>Start Work</strong> With Me?</h2>
-            </div>
-          </div>
-
-          <div class="col-md-7 mb-5 mb-md-0">
-            <form action="" class="site-form">
-              <h3 class="mb-5">Get In Touch</h3>
-              <div class="form-group">
-                <input type="text" class="form-control px-3 py-4" placeholder="Your Name">
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control px-3 py-4" placeholder="Your Email">
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control px-3 py-4" placeholder="Your Phone">
-              </div>
-              <div class="form-group mb-5">
-                <textarea class="form-control px-3 py-4"cols="30" rows="10" placeholder="Write a Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" class="btn btn-primary  px-4 py-3" value="Send Message">
-              </div>
-            </form>
-          </div>
           <div class="col-md-5 pl-md-5">
             <h3 class="mb-5">My Contact Details</h3>
             <ul class="site-contact-details">
               <li>
                 <span class="text-uppercase">Email</span>
-                site@gmail.com
+                janekolacki95@gmail.com
               </li>
               <li>
                 <span class="text-uppercase">Phone</span>
-                +30 976 1382 9921
-              </li>
-              <li>
-                <span class="text-uppercase">Fax</span>
-                +30 976 1382 9922
+                +1-815-641-0087
               </li>
               <li>
                 <span class="text-uppercase">Address</span>
-                San Francisco, CA <br>
-                4th Floor8 Lower  <br>
-                San Francisco street, M1 50F
+                35 W Wacker <br>
+                15th Floor <br>
+                Chicago, IL 60601
               </li>
             </ul>
           </div>
@@ -624,7 +500,6 @@
               <a href="#" class="social-item"><span class="icon-twitter"></span></a>
               <a href="#" class="social-item"><span class="icon-instagram2"></span></a>
               <a href="#" class="social-item"><span class="icon-linkedin2"></span></a>
-              <a href="#" class="social-item"><span class="icon-vimeo"></span></a>
             </p>
           </div>
         </div>
