--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/flexslider.css">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -32,7 +26,6 @@
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
           </ul>
@@ -40,27 +33,23 @@
       </div>
     </nav>
 
-
-
-
-    <section class="site-hero" style="background-image: url(images/image_1.jpg);" id="section-home" data-stellar-background-ratio="0.5">
+    <section class="site-hero" id="section-home" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row intro-text align-items-center justify-content-center">
           <div class="col-md-10 text-center">
-            <h1 class="site-heading site-animate">Welcome, I'm <strong>Jane Kolacki</strong></h1>
+            <h1 class="site-heading site-animate">Hi, I'm <strong>Jane Kolacki</strong></h1>
             <p class="lead site-subheading mb-4 site-animate">A Search Engine Optimization Specialist at a digital agency.</p>
             <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More On Me</a></p>
           </div>
         </div>
       </div>
-    </section> <!-- section -->
-
+    </section>
 
     <section class="site-section" id="section-about">
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-            <img src="images/image_1_long.jpg" alt="Image placeholder" class="img-fluid">
+            <img src="images/jane.jpg" alt="Image placeholder" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5">
             <div class="section-heading">
@@ -71,7 +60,7 @@
 
             <p>
               <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-              <a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+              <a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download Resume</a>
             </p>
           </div>
         </div>
@@ -132,55 +121,13 @@
       </div>
     </section>
 
-    <section class="site-section bg-light">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-12">
-            <div class="section-heading text-center">
-              <h2><strong>References</strong></h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-
-              <div class="block-47 d-flex mb-5">
-                <div class="block-47-image">
-                  <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">
-                </div>
-                <blockquote class="block-47-quote">
-                  <p>&ldquo;Jane always finishes her projects on time and her work is of high quality.&rdquo;</p>
-                  <cite class="block-47-quote-author">&mdash; Boss, Performics</cite>
-                </blockquote>
-              </div>
-
-          </div>
-          <div class="col-md-6">
-
-            <div class="block-47 d-flex mb-5">
-                <div class="block-47-image">
-                  <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">
-                </div>
-                <blockquote class="block-47-quote">
-                  <p>&ldquo;Jane comes prepared to work and manages her time well..&rdquo;</p>
-                  <cite class="block-47-quote-author">&mdash; Manager, Performics</cite>
-                </blockquote>
-              </div>
-
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-
-    <section class="site-section border-top pb-0"  id="section-services">
+      <section class="site-section border-top pb-0"  id="section-services">
       <div class="container">
 
         <div class="row mb-4">
           <div class="col-md-12">
             <div class="section-heading text-center">
-              <h2>My<strong>Experience</strong></h2>
+              <h2>My<strong> Expertise</strong></h2>
             </div>
           </div>
         </div>
@@ -192,7 +139,7 @@
                 <span class="icon-phone3"></span>
               </span>
               <h3 class="mb-4">Technical SEO Audit</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+              <p>Audit the health of a website in order to find out what fixes might be needed to improve it. The audit includes comparing a crawl of the site to what search engines indexed, analyzing the Robots.txt and XML Sitemap files, and ensuring all pages have the appropriate crawler directives implemented to be considered indexable.</p>
               <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
             </div>
           </div>
@@ -202,7 +149,7 @@
                 <span class="icon-wallet2"></span>
               </span>
               <h3 class="mb-4">Content Audit</h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+              <p>Analyze the content that exists on a site to determine where optimizations could be made. Audit the navigation, usability, find content/copy gaps, and grade the overall experience.</p>
               <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
             </div>
           </div>
@@ -212,118 +159,14 @@
                 <span class="icon-lightbulb"></span>
               </span>
               <h3 class="mb-4">Site Speed Audit</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <p>Test the mobile and desktop site speeds to uncover images and CSS/JavaScript files that need mitigating. Ensure the site has a site speed of at least 85 to be considered speedy.</p>
               <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 text-center mb-5">
-            <div class="site-service-item site-animate" data-animate-effect="fadeIn">
-              <span class="icon">
-                <span class="icon-phone3"></span>
-              </span>
-              <h3 class="mb-4">Monthly Reporting</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-              <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
-            </div>
-          </div>
-                    
         </div>
       </div>
     </section>
-
-    <section class="site-section" id="section-portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="section-heading text-center col-md-12">
-              <h2>Featured <strong>Portfolio</strong></h2>
-            </div>
-        </div>
-        <div class="filters">
-                        <ul>
-                            <li class="active" data-filter="*">All</li>
-                            <li data-filter=".packaging">Packaging</li>
-                            <li data-filter=".mockup">Mockup</li>
-                        </ul>
-                    </div>
-
-                    <div class="filters-content">
-                        <div class="row grid">
-                            <div class="single-portfolio col-sm-4 all mockup">
-                              <div class="relative">
-                                <div class="thumb">
-                                  <div class="overlay overlay-bg"></div>
-                                   <img class="image img-fluid" src="images/p1.jpg" alt="">
-                                </div>
-                  <a href="images/p1.jpg" class="img-pop-up">
-                    <div class="middle">
-                      <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                    </div>
-                </a>
-                              </div>
-                <div class="p-inner">
-                    <h4>Square Box Mockup</h4>
-                  <div class="cat">Mockup</div>
-                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all mockup">
-                              <div class="relative">
-                                <div class="thumb">
-                                  <div class="overlay overlay-bg"></div>
-                                   <img class="image img-fluid" src="images/p2.jpg" alt="">
-                                </div>
-                  <a href="images/p2.jpg" class="img-pop-up">
-                    <div class="middle">
-                      <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                    </div>
-                </a>
-                              </div>
-                <div class="p-inner">
-                    <h4>Product Box Package Mockup</h4>
-                  <div class="cat">Mockup</div>
-                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all packaging">
-                              <div class="relative">
-                                <div class="thumb">
-                                  <div class="overlay overlay-bg"></div>
-                                   <img class="image img-fluid" src="images/p3.jpg" alt="">
-                                </div>
-                  <a href="images/p3.jpg" class="img-pop-up">
-                    <div class="middle">
-                      <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                    </div>
-                  </a>
-
-                              </div>
-                                <div class="p-inner">
-                                    <h4>Creative Package Design</h4>
-                                    <div class="cat">Packaging</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all packaging">
-                              <div class="relative">
-                                <div class="thumb">
-                                  <div class="overlay overlay-bg"></div>
-                                   <img class="image img-fluid" src="images/p4.jpg" alt="">
-                                </div>
-                  <a href="images/p4.jpg" class="img-pop-up">
-                    <div class="middle">
-                      <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                    </div>
-                  </a>
-                              </div>
-                                <div class="p-inner">
-                                    <h4>Packaging Brand</h4>
-                                    <div class="cat">Packaging</div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-      </div>
-    </section>
-    <!-- .section -->
 
     <section class="site-section bg-light " id="section-resume">
       <div class="container">
@@ -336,31 +179,17 @@
           <div class="col-md-6">
             <h2 class="mb-5">Education</h2>
             <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-              <h3>Masteral in Information Technology</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">New York University</span>
+              <span class="date"><span class="icon-calendar"></span> April 2019 - Present</span>
+              <h3>Front-End Web Development Course</h3>
+              <p>Introduction to HTML, CSS, and JavaScript.</p>
+              <span class="school">General Assembly</span>
             </div>
 
             <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-              <h3>Masteral in Information Technology</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">New York University</span>
-            </div>
-
-            <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-              <h3>Masteral in Information Technology</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">New York University</span>
-            </div>
-
-            <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-              <h3>Masteral in Information Technology</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">New York University</span>
+              <span class="date"><span class="icon-calendar"></span> August 2013 - May 2017</span>
+              <h3>B.A. - Corporate Communication, Public Relations, Marketing</h3>
+              <p>Evans Scholar</p>
+              <span class="school">Marquette University</span>
             </div>
 
           </div>
@@ -370,38 +199,30 @@
             <h2 class="mb-5">Experience</h2>
 
             <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-              <h3>Lead Product Designer</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">Github</span>
+              <span class="date"><span class="icon-calendar"></span> May 2017 - Present</span>
+              <h3>SEO Specialist</h3>
+              <p>Analyze, review, and implement websites that are optimized to be ranked highly by search engines.</p>
+              <span class="school"> Performics</span>
             </div>
 
             <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-              <h3>Lead Product Designer</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">Facebook</span>
+              <span class="date"><span class="icon-calendar"></span> May 2016 - August 2016</span>
+              <h3>Digital Marketing Intern</h3>
+              <p>Developed and managed digital marketing campaigns. Utilized a range of channels including Paid Search and SEO.</p>
+              <span class="school">iProspect</span>
             </div>
 
             <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-              <h3>Lead Product Designer</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">Twitter</span>
+              <span class="date"><span class="icon-calendar"></span> May 2012 - August 2016</span>
+              <h3>Human Capital Intern</h3>
+              <p>Provided talent development support for various programs that include professional development, business specific initiatives, and firm wide programs.</p>
+              <span class="school">Robert W. Baird & Co.</span>
             </div>
-
-            <div class="resume-item mb-4">
-              <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-              <h3>Lead Product Designer</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              <span class="school">Shopify</span>
-            </div>
-
 
           </div>
         </div>
       </div>
-    </section> <!-- .section -->
+    </section>
 
       <section class="site-section bg-light" id="section-contact">
       <div class="container">
@@ -435,31 +256,17 @@
       </div>
     </section>
 
-
     <footer class="site-footer">
       <div class="container">
         <div class="row mb-3">
-          <div class="col-md-12 text-center">
-            <p>
-              <a href="#" class="social-item"><span class="icon-facebook2"></span></a>
-              <a href="#" class="social-item"><span class="icon-twitter"></span></a>
-              <a href="#" class="social-item"><span class="icon-instagram2"></span></a>
-              <a href="#" class="social-item"><span class="icon-linkedin2"></span></a>
-            </p>
-          </div>
         </div>
         <div class="row">
             <p class="col-12 text-center">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
             </p>
         </div>
       </div>
     </footer>
-
-
-
 
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/popper.min.js"></script>
@@ -473,9 +280,5 @@
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="js/custom.js"></script>
 
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-
-  </body>
+      </body>
 </html>
